# nonlinear_optimization

./: README.md
cvsba/: CMakeLists.txt  package.xml
cvsba/src/: cvsba.cpp  sba_levmar.c
cvsba_demo/: CMakeLists.txt  package.xml
cvsba_demo/src/: cvsba_demo_node.cpp
levmar/: CMakeLists.txt  package.xml
levmar/src/: levmar.h
levmar_demo/: CMakeLists.txt  package.xml
levmar_demo/src/: levmar_demo_node1.c  levmar_demo_node2.cpp
splm/: CMakeLists.txt  package.xml
splm/src/: splm_misc.c
splm_demo/: CMakeLists.txt  package.xml
splm_demo/src/: splm_demo_node.c
